cabal-version: 2.4

name:
    pulse
version:
    0.1.0.0
homepage:
    https://github.com/YellowDogDingo/pulse
author:
    Thomas Bates
maintainer:
    me@tom-bates.co.uk
build-type:
    Simple

common extensions
    default-extensions:
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DisambiguateRecordFields
        DuplicateRecordFields
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators
        UnicodeSyntax

common dependencies
    build-depends:
        managed == 1.0.6,
        text == 1.2.3.1,
        sdl2 == 2.4.1.0,
        OpenGL == 3.0.2.2,
        OpenGLRaw == 3.3.1.0,
        safe-exceptions == 0.1.7.0,
        bytestring == 0.10.8.2,
        vector-sized == 1.2.0.1,
        bound == 2.0.1,
        vector == 0.12.0.3,
        vector-space == 0.16,
        finite-typelits == 0.1.4.2,
        adjunctions == 4.4,
        distributive == 0.6.1,
        indexed-list-literals == 0.2.1.2,
        quickcheck-instances == 0.3.22

executable pulse
    import:
        extensions,
        dependencies
    main-is:
        Pulse.hs
    default-language:
        Haskell2010
    hs-source-dirs:
        src,
        test
    ghc-options:
        -Wall
    build-depends:
        base,
        QuickCheck,
        test-invariant == 0.4.5.0
    ghc-options:
        -dynamic
        -threaded
        -main-is Pulse

test-suite spec
    import:
        extensions,
        dependencies
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    ghc-options:
        -Wall
        -main-is Spec
    main-is:
        Spec.hs
    other-modules:
        Pulse
    build-depends:
        base,
        QuickCheck,
        test-invariant == 0.4.5.0
